Fix to mobile line wrap on login and register forms.

--- a/src/App.css
+++ b/src/App.css
@@ -101,4 +101,8 @@
   .form-table {
     overflow: auto;
   }
+
+  .custom-notification {
+    line-height: initial;
+  }
 }
